--- a/latex_document/main.tex
+++ b/latex_document/main.tex
@@ -18,7 +18,7 @@
 \usepackage{graphicx}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
 
-\title{CUDA Programming}
+\title{CUDA Programming, Draft.}
 \author{Srini Prakash Maiya}
 
 \newenvironment{code}{\captionsetup{type=listing}}{}
@@ -33,4 +33,5 @@
 \input{Data_parallellism.tex}
 \input{MultiDimensional_Grids.tex}
 \input{Compute_architecture.tex}
+\input{Memory_architecture.tex}
 \end{document}
