Upto Chapter4 Compute architecture

--- a/latex_document/main.tex
+++ b/latex_document/main.tex
@@ -2,6 +2,7 @@
 \usepackage[newfloat]{minted}
 \usepackage{float}
 \usepackage{caption}
+\usepackage{tcolorbox}
 
 \setminted{bgcolor=Beige,breaklines=true,linenos=true,numberblanklines=true}
 % Language setting
